--- a/src/Pages/Home/CovidUpdate/CovidUpdate.css
+++ b/src/Pages/Home/CovidUpdate/CovidUpdate.css
@@ -1,3 +1,17 @@
-.width{
-    width: 90%;
+.covid-update-box{
+    border-radius: 10px;
+}
+.grid{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    column-gap: 25px;
+}
+
+@media only screen and (max-width:770px) {
+    .grid{
+    display: grid;
+    grid-template-columns: 1fr;
+    column-gap: 25px;
+    row-gap: 25px;
+}
 }
